# machine_learning

./: .gitignore  Casos_prueba_clusters.xlsx  README.md  SecretConfig.py  app.py  casos_prueba.xlsx  datos_prueba.csv  pyproject.toml  requirements.txt
machine_learning/: README.md  SecretConfig.py  app.py  datos_prueba.csv  requirements.txt
machine_learning-main (1)/machine_learning-main/sql/: create_results_table.sql  delete_results_table.sql
machine_learning-main (1)/machine_learning-main/src/view/console/: kmeans_console_view.py
machine_learning/sql/: create_results_table.sql
machine_learning/src/controller/: results_controller.py
machine_learning/src/model/: kmeans_logic.py  result_model.py
machine_learning/src/model/errors/: kmeans_error.py
machine_learning/src/view/console/: kmeans_console_view.py
machine_learning/src/view/gui/android/: buildozer.spec
src/: app.py
src/app/: app_logic.py
src/controller/: results_controller.py
src/errors/: app_error.py
src/model/: KMeansLogic.py  kmeans_logic.py  result_model.py
src/model/errors/: KMeansError.py
src/view/: app_view.py
src/view/console/: KMeansConsoleView.py  kmeans_console_view.py
src/view/gui/: buildozer.spec  kmeans_gui.py
src/view/gui/android/: buildozer.spec
src/view/gui/windows/: kmeans_gui.spec  kmeans_windows.spec
templates/: buscar.html  crear_tabla.html  crear_usuario.html  index.html  lista.html  lista_tarjetas.html  menu.html  modificar.html  resultados.html  subir_archivo.html
tests/: KMeansTest.py  kmeans_test.py  results_table_test.py  test_clustering.py
