[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["sanma613 <santimachado613@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"
kivy = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
