[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["sanma613 <santimachado613@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "1.3.5"  # Compatible con Python 3.9
numpy = "1.21.6"  # Compatible con Python 3.9
matplotlib = "^3.4.3"
scikit-learn = "^1.0.2"
kivy = "^2.1.0"
buildozer = "^1.5.0"
cython = "^0.29.24"
pyinstaller = "^6.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
